# ApplyWise

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_api_job_source.py
apps/api/app/: main.py
apps/api/app/api/v1/: auth.py  documents.py  generate.py  jobs.py  knowledge.py  matching.py  prep.py  tracker.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/models/: __init__.py  chat.py  document.py  generated.py  job.py  user.py
apps/api/app/schemas/: auth.py  document.py  generate.py  job.py  knowledge.py  matching.py  prep.py  tracker.py
apps/api/app/services/: storage.py
apps/api/app/services/generation/: output_generator.py  prep_generator.py
apps/api/app/services/ingestion/: chunker.py  embeddings.py  extractor.py  job_parser.py  job_search.py  pipeline.py
apps/api/app/services/matching/: scorer.py  skill_extractor.py
apps/api/app/services/rag/: generator.py  retriever.py
apps/api/app/workers/: celery_app.py  document_tasks.py
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: index.css  router.tsx
apps/web/src/components/jobs/: AddJobModal.tsx  JobCard.tsx  MatchReport.tsx
apps/web/src/lib/: theme.tsx
apps/web/src/pages/: DashboardPage.tsx
(+23 files in other folders)
